--- a/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
+++ b/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
@@ -318,7 +318,7 @@ iubenda hosts this content and only collects the Personal Data strictly necessar
                                 <rect key="frame" x="160" y="543" width="64" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Send"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Send"/>
                                 <connections>
                                     <action selector="Send:" destination="s4c-8Z-kSH" eventType="touchUpInside" id="mrX-kH-3V2"/>
                                 </connections>
@@ -428,27 +428,11 @@ Please note that these terms and conditions are for illustrative purposes only a
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NZw-Jt-B86" userLabel="BigContainer">
                                 <rect key="frame" x="30" y="30" width="333" height="743"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="D2g-PW-feh">
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="D2g-PW-feh">
                                         <rect key="frame" x="0.0" y="0.0" width="333" height="44.666666666666664"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Do-O8-mHI" userLabel="SettingsBTN">
-                                                <rect key="frame" x="0.0" y="0.0" width="105.66666666666667" height="44.666666666666664"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="settings ">
-                                                    <backgroundConfiguration key="background"/>
-                                                </buttonConfiguration>
-                                                <connections>
-                                                    <action selector="SettingsBTN:" destination="sC7-tU-LxE" eventType="touchUpInside" id="lv2-PF-iae"/>
-                                                </connections>
-                                            </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="en1-2m-eBS">
-                                                <rect key="frame" x="113.66666666666666" y="0.0" width="105.66666666666666" height="44.666666666666664"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUL-cR-Nxf" userLabel="ProfileBTN">
-                                                <rect key="frame" x="227.33333333333329" y="0.0" width="105.66666666666666" height="44.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="63.666666666666664" height="44.666666666666664"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain">
                                                     <backgroundConfiguration key="background" image="profile" imageContentMode="scaleAspectFit"/>
@@ -457,9 +441,28 @@ Please note that these terms and conditions are for illustrative purposes only a
                                                     <action selector="Profile:" destination="sC7-tU-LxE" eventType="touchUpInside" id="O8O-hK-hR2"/>
                                                 </connections>
                                             </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="en1-2m-eBS">
+                                                <rect key="frame" x="71.666666666666686" y="0.0" width="181" height="44.666666666666664"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Do-O8-mHI" userLabel="SettingsBTN">
+                                                <rect key="frame" x="260.66666666666669" y="0.0" width="72.333333333333314" height="44.666666666666664"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="settings ">
+                                                    <backgroundConfiguration key="background"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="SettingsBTN:" destination="sC7-tU-LxE" eventType="touchUpInside" id="lv2-PF-iae"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="4Do-O8-mHI" firstAttribute="width" secondItem="en1-2m-eBS" secondAttribute="width" multiplier="0.4" id="W11-eZ-arq"/>
+                                        </constraints>
                                     </stackView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RealvisionLogo" translatesAutoresizingMaskIntoConstraints="NO" id="5VY-Qw-Kmt">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RealvisionLogo" translatesAutoresizingMaskIntoConstraints="NO" id="5VY-Qw-Kmt">
                                         <rect key="frame" x="0.0" y="52.666666666666671" width="333" height="148.66666666666663"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9Dv-nm-mi7" userLabel="ButtonsSV">
@@ -468,7 +471,9 @@ Please note that these terms and conditions are for illustrative purposes only a
                                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3u8-uf-S1d" userLabel="photosBTN">
                                                 <rect key="frame" x="0.0" y="0.0" width="105.66666666666667" height="148.33333333333334"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="Img"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="Img">
+                                                    <backgroundConfiguration key="background"/>
+                                                </buttonConfiguration>
                                                 <connections>
                                                     <action selector="photos:" destination="sC7-tU-LxE" eventType="touchUpInside" id="9NL-pY-M7j"/>
                                                 </connections>
@@ -476,7 +481,9 @@ Please note that these terms and conditions are for illustrative purposes only a
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ef5-QW-zpW" userLabel="liveBTN">
                                                 <rect key="frame" x="113.66666666666666" y="0.0" width="105.66666666666666" height="148.33333333333334"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="live"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="live">
+                                                    <backgroundConfiguration key="background"/>
+                                                </buttonConfiguration>
                                                 <connections>
                                                     <action selector="live:" destination="sC7-tU-LxE" eventType="touchUpInside" id="tEp-Nh-B4G"/>
                                                     <segue destination="Xyy-4c-b7h" kind="show" identifier="liveVC" id="78U-nV-Cjt"/>
@@ -486,7 +493,7 @@ Please note that these terms and conditions are for illustrative purposes only a
                                                 <rect key="frame" x="227.33333333333329" y="0.0" width="105.66666666666666" height="148.33333333333334"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain">
-                                                    <backgroundConfiguration key="background" image="coreml"/>
+                                                    <backgroundConfiguration key="background" image="Layers"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="onHand:" destination="sC7-tU-LxE" eventType="touchUpInside" id="hHa-HB-ate"/>
@@ -611,7 +618,7 @@ Please note that these terms and conditions are for illustrative purposes only a
                                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udM-Rw-T6N">
                                                 <rect key="frame" x="153.66666666666666" y="0.0" width="65.666666666666657" height="41"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                                 <connections>
                                                     <action selector="loginBTN:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kGX-RY-4nC"/>
                                                 </connections>
@@ -892,7 +899,7 @@ Please note that these terms and conditions are for illustrative purposes only a
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XyY-Qu-sql">
                                                         <rect key="frame" x="82.333333333333329" y="0.0" width="148.33333333333337" height="60"/>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Create account"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Create account"/>
                                                         <connections>
                                                             <action selector="createAccount:" destination="PuM-xF-KL3" eventType="touchUpInside" id="gco-kk-yja"/>
                                                         </connections>
@@ -1119,7 +1126,7 @@ Please note that these terms and conditions are for illustrative purposes only a
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S6B-ys-XKw">
                                         <rect key="frame" x="0.0" y="601.33333333333337" width="353" height="40.333333333333371"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Logout"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Logout"/>
                                         <connections>
                                             <action selector="logout:" destination="VKX-vW-WmE" eventType="touchUpInside" id="fL8-ql-FXt"/>
                                         </connections>
@@ -1127,7 +1134,7 @@ Please note that these terms and conditions are for illustrative purposes only a
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PjZ-d3-p7v">
                                         <rect key="frame" x="0.0" y="649.66666666666663" width="353" height="40"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Delete"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Delete"/>
                                         <connections>
                                             <action selector="Delete:" destination="VKX-vW-WmE" eventType="touchUpInside" id="1bv-Fe-x6c"/>
                                         </connections>
@@ -1177,10 +1184,10 @@ Please note that these terms and conditions are for illustrative purposes only a
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Img" width="72" height="71"/>
+        <image name="Layers" width="559" height="447"/>
         <image name="RealvisionLogo" width="492" height="508"/>
         <image name="Share" width="32" height="32"/>
         <image name="Terms" width="32" height="32"/>
-        <image name="coreml" width="690" height="362"/>
         <image name="helpbutton" width="32" height="32"/>
         <image name="live" width="64" height="64"/>
         <image name="privacy" width="32" height="32"/>
